# smart-car2021-vision

./: README.md
src/detect_server2/: CMakeLists.txt  package.xml
src/detect_server2/src/: detect_server_node.cpp
src/retinaface5/: CMakeLists.txt  package.xml
src/retinaface5/include/retinaface5/: glass.h
src/retinaface5/launch/: nn.launch
src/retinaface5/src/: decode.cu  glass.cpp  hair.cpp  plugin_factory.cpp  retina_r50.cpp
src/retinaface5/srv/: detect.srv
src/ucamera/: .CMakeLists.txt.swp  CMakeLists.txt  package.xml
src/ucamera/config/: nav.yaml
src/ucamera/msg/: detect_info.msg
src/ucamera/src/: .ucamera_node.cpp.swp  ucamera_node.cpp  ucamera_node_without_stop.cpp
src/ucamera_debag/: CMakeLists.txt  package.xml
src/ucamera_debag/config/: nav.yaml
src/ucamera_debag/src/: ucamera_node.cpp
